--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "http2": "^3.2.0",
-    "koala": "^1.0.0",
+    "express": "^4.13.3",
     "spdy": "^2.0.4"
   }
 }
